--- a/janela_login.ui
+++ b/janela_login.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>677</width>
-    <height>376</height>
+    <width>681</width>
+    <height>413</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -64,6 +64,23 @@ QProgressBar::chunk{
     </property>
     <property name="format">
      <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>480</x>
+      <y>384</y>
+      <width>57</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color:rgb(120,120,120)
+</string>
+    </property>
+    <property name="text">
+     <string>versao:</string>
     </property>
    </widget>
   </widget>
